Add scans and deployed test

--- a/assign3/Makefile
+++ b/assign3/Makefile
@@ -1,9 +1,17 @@
-run: record_mgr.o dberror.o storage_mgr.o buffer_mgr.o data_structures.o
+run: test_assign3_1.o rm_serializer.o record_mgr.o dberror.o storage_mgr.o buffer_mgr.o data_structures.o expr.o
 	gcc -o bin/run bin/*.o
 
-record_mgr.o: record_mgr.c dberror.h storage_mgr.h buffer_mgr.h record_mgr.h tables.h data_structures.h
+test_assign3_1.o: test_assign3_1.c dberror.h expr.h record_mgr.h tables.h test_helper.h
+	gcc -c test_assign3_1.c -o bin/test_assign3_1.o
+
+rm_serializer.o: dberror.h record_mgr.h tables.h
+	gcc -c rm_serializer.c -o bin/rm_serializer.o
+
+record_mgr.o: record_mgr.c dberror.h storage_mgr.h buffer_mgr.h record_mgr.h tables.h data_structures.h expr.h
 	gcc -c record_mgr.c -o bin/record_mgr.o
 
+expr.o: expr.c dberror.h expr.h tables.h record_mgr.h
+	gcc -c expr.c -o bin/expr.o
 
 buffer_mgr_stat.o: buffer_mgr_stat.c buffer_mgr_stat.h buffer_mgr.h
 	gcc -c buffer_mgr_stat.c -o bin/buffer_mgr_stat.o
