--- a/assign3/Makefile
+++ b/assign3/Makefile
@@ -7,8 +7,8 @@ run1: test_assign3_1.o rm_serializer.o record_mgr.o dberror.o storage_mgr.o buff
 run2: test_expr.o rm_serializer.o record_mgr.o dberror.o storage_mgr.o buffer_mgr.o data_structures.o expr.o
 	gcc -o bin/test_expr/run bin/test_expr.o bin/rm_serializer.o bin/record_mgr.o bin/dberror.o bin/storage_mgr.o bin/buffer_mgr.o bin/data_structures.o bin/expr.o
 
-run3: client.o rm_serializer.o record_mgr.o dberror.o storage_mgr.o buffer_mgr.o data_structures.o expr.o
-	gcc -o bin/test_client/run bin/client.o bin/rm_serializer.o bin/record_mgr.o bin/dberror.o bin/storage_mgr.o bin/buffer_mgr.o bin/data_structures.o bin/expr.o
+run3: client.o record_mgr.o dberror.o storage_mgr.o buffer_mgr.o data_structures.o expr.o
+	gcc -o bin/test_client/run bin/client.o bin/record_mgr.o bin/dberror.o bin/storage_mgr.o bin/buffer_mgr.o bin/data_structures.o bin/expr.o
 
 client.o: client.c record_mgr.h dberror.h const.h
 	gcc -c client.c -o bin/client.o
