Add memory leaks tester to Makefile

--- a/assign3/Makefile
+++ b/assign3/Makefile
@@ -1,4 +1,4 @@
-all: run1 run2 run3
+all: run1 run2 run3 run4
 
 run1: test_assign3_1.o rm_serializer.o record_mgr.o dberror.o storage_mgr.o buffer_mgr.o data_structures.o expr.o
 	gcc -o bin/test_assign/run bin/test_assign3_1.o bin/rm_serializer.o bin/record_mgr.o bin/dberror.o bin/storage_mgr.o bin/buffer_mgr.o bin/data_structures.o bin/expr.o
@@ -8,6 +8,12 @@ run2: test_expr.o rm_serializer.o record_mgr.o dberror.o storage_mgr.o buffer_mg
 
 run3: client.o record_mgr.o dberror.o storage_mgr.o buffer_mgr.o data_structures.o expr.o rm_serializer.o
 	gcc -o bin/test_client/run bin/client.o bin/rm_serializer.o bin/record_mgr.o bin/dberror.o bin/storage_mgr.o bin/buffer_mgr.o bin/data_structures.o bin/expr.o
+
+run4: test_memory_leaks.o record_mgr.o dberror.o storage_mgr.o buffer_mgr.o data_structures.o expr.o rm_serializer.o
+	gcc -o bin/test_memory_leaks/run bin/test_memory_leaks.o bin/rm_serializer.o bin/record_mgr.o bin/dberror.o bin/storage_mgr.o bin/buffer_mgr.o bin/data_structures.o bin/expr.o
+
+test_memory_leaks.o : test_memory_leaks.c record_mgr.h dberror.h const.h expr.h
+	gcc -c test_memory_leaks.c -o bin/test_memory_leaks.o
 
 client.o: client.c record_mgr.h dberror.h const.h expr.h
 	gcc -c client.c -o bin/client.o
